# freeplane_plugin_grpc

./: .gitignore  AGENTS.md  Activator.java  Dockerfile.e2e  GrpcPlugin.java  Makefile  README.md  build.gradle  docker-compose.e2e.yml
.agents/skills/architect/: SKILL.md
.agents/skills/coder/: SKILL.md
.agents/skills/freeplane_plugin_grpc/: SKILL.md
.agents/skills/publisher/: SKILL.md
.agents/skills/reviewer/: SKILL.md
.agents/skills/scout/: SKILL.md
.github/workflows/: ci.yml  freeplane-e2e.yml  integration.yml  release.yml
grpc/: PROTO_REFERENCE.md
grpc/cpp/: CMakeLists.txt  README.md  generate_stubs.sh
grpc/cpp/freeplane/: freeplane.grpc.pb.cc  freeplane.grpc.pb.h  freeplane.pb.cc  freeplane.pb.h
grpc/cpp/src/: client.cpp  client.h  error.h  mindmap.cpp  mindmap.h  node.cpp  node.h
grpc/cpp/tests/: test_client.cpp  test_mindmap.cpp  test_node.cpp
grpc/cpp/tests/integration/: test_integration.cpp
grpc/golang/: README.md  client.go  client_integration_test.go  error.go  errors.go  freeplane_grpc_test.go  generate.sh  generate_stubs.sh  go.mod  go.sum  integration_test_helper.go  mindmap.go  mindmap_integration_test.go  node.go  node_integration_test.go
grpc/golang/examples/: basic_usage.go
grpc/golang/freeplane/: freeplane.pb.go  freeplane_grpc.pb.go
grpc/golang/internal/mock/: mock_freeplane.go
grpc/golang/tests/: client_test.go  error_test.go  mindmap_test.go  node_test.go
grpc/kotlin/: README.md  build.gradle.kts  generate_stubs.sh  settings.gradle.kts
grpc/kotlin/examples/: basic_usage.kt
grpc/kotlin/src/main/kotlin/org/freeplane/grpc/: Exceptions.kt  FreeplaneClient.kt  MindMap.kt  Node.kt
grpc/kotlin/src/main/proto/: freeplane.proto
grpc/kotlin/src/test/kotlin/org/freeplane/grpc/: FreeplaneClientTest.kt  IntegrationTest.kt  MindMapTest.kt  NodeTest.kt
grpc/nodejs/: README.md  package-lock.json  package.json
grpc/nodejs/examples/: basic_usage.js  smoke_test.js
grpc/nodejs/src/: client.js  exceptions.js  index.js  mindmap.js  node.js
grpc/nodejs/test/integration/: client.test.js  integration-helper.js  mindmap.test.js  node.test.js
grpc/nodejs/test/unit/: client.test.js  exceptions.test.js  mindmap.test.js  node.test.js
grpc/nvim/freeplane/: freeplane_pb2.py  freeplane_pb2_grpc.py
grpc/python/: .gitignore  README.md  freeplane_pb2.py  freeplane_pb2.pyi  freeplane_pb2_grpc.py  generate_stubs.sh  pyproject.toml  statusInfoSet.py
grpc/python/examples/: basic_usage.py  modify_mindmap_example.py  test_blank_map.mm  test_json_roundtrip.py
grpc/python/freeplane_grpc/: __init__.py  _stub.py  client.py  exceptions.py  mindmap.py  node.py
grpc/python/tests/: test_client.py  test_exceptions.py  test_mindmap.py  test_node.py
grpc/ruby/: Gemfile  README.md  freeplane_grpc_client.gemspec  generate_stubs.sh  pomodori_example_data.json  pomodoro.rb  setStatusSet.rb
grpc/ruby/examples/: basic_usage.rb
grpc/ruby/lib/: freeplane_grpc_client.rb  freeplane_pb.rb  freeplane_services_pb.rb
grpc/ruby/lib/freeplane_grpc_client/: client.rb  exceptions.rb  mindmap.rb  node.rb  version.rb
grpc/ruby/spec/: spec_helper.rb
grpc/ruby/spec/freeplane_grpc_client/: client_spec.rb  exceptions_spec.rb  mindmap_spec.rb  node_spec.rb
grpc/ruby/spec/integration/: client_integration_spec.rb  integration_helper.rb  mindmap_integration_spec.rb  node_integration_spec.rb
grpc/rust/: Cargo.toml  README.md  build.rs
grpc/rust/src/: client.rs  error.rs  lib.rs  mindmap.rs  node.rs
grpc/rust/tests/: integration_test.rs  test_client.rs  test_error.rs  test_mindmap.rs  test_node.rs
grpc/shell/: centerNode.sh  executeGroovy.sh  freeplane.proto  getNodeLink.sh  getNodeNote.sh  getNodeText.sh  getParentNode.sh  grpcurl_test.sh  import_json.sh  listChildNodes.sh  moveNode.sh  setNodeText.sh
misc/: freeplane_multinode.d2  freeplane_network.d2  grpc_plugin.d2
misc/chatgpt/: clipboard.sh  send_request.py  text_2mindmap.sh
misc/freeplane_llm/: Cargo.toml  README.md
misc/freeplane_llm/src/: input.rs  llm.rs  main.rs  schema.rs
misc/freeplane_llm/tests/: integration_test.rs
misc/nvim/: init.lua  note.lua
misc/nvim/freeplane/: add_file_note.py  clipboard2mindmap.py  freeplane_python.sh  requirements.txt
misc/scripts/: _check_grpc_map.py  run-e2e-tests.sh  run-freeplane-kotlin-smoke-test.sh  run-freeplane-nodejs-smoke-test.sh  run-freeplane-python-smoke-test.sh  run-freeplane-ruby-integration.rb  run-freeplane-ruby-smoke-test.sh  start-xvfb-freeplane-env.sh  stop-xvfb-freeplane-env.sh
scripts/: run-tests.sh
src/main/java/org/freeplane/plugin/grpc/: Activator.java  FreeplaneGrpcService.java  GrpcRegistration.java  JsonHelper.java  NodeUtils.java
src/main/proto/: freeplane.proto  generate.sh  helloworld.proto
