[package]
name = "freeplane-grpc"
version = "0.1.0"
edition = "2021"
description = "Rust gRPC client for Freeplane mind map application"
license = "MIT"

[lib]
name = "freeplane_grpc"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
async-trait = "0.1"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
prost-build = "0.13"

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["full", "test-util"] }
